--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.11.8",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@vercel/analytics": "^0.1.3",
     "classnames": "^2.3.2",
     "framer-motion": "^7.6.3",
     "next": "13.0.1",
