--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "sass": "^1.55.0",
     "sharp": "^0.31.1",
+    "swiper": "^8.4.4",
     "typescript": "4.8.4"
   },
   "devDependencies": {
