--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.0.1",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "concurrently": "^7.5.0",
